--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,15 +5,31 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          id="WebApp_ID" version="4.0">
     <display-name>Spring mvc Application</display-name>
+    <filter>
+        <filter-name>characterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>characterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
-        <servlet-name>HelloWeb</servlet-name>
+        <servlet-name>MySpring</servlet-name>
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>HelloWeb</servlet-name>
+        <servlet-name>MySpring</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
